aws/ec2/create-route-table.txt
CREATE-ROUTE-TABLE()                                      CREATE-ROUTE-TABLE()



NAME
       create-route-table -

DESCRIPTION
       Creates  a  route table for the specified VPC. After you create a route
       table, you can add routes and associate the table with a subnet.

       For more information, see Route tables in the  Amazon  Virtual  Private
       Cloud User Guide .

       See also: AWS API Documentation

SYNOPSIS
            create-route-table
          [--dry-run | --no-dry-run]
          --vpc-id <value>
          [--tag-specifications <value>]
          [--cli-input-json <value>]
          [--generate-cli-skeleton <value>]
          [--debug]
          [--endpoint-url <value>]
          [--no-verify-ssl]
          [--no-paginate]
          [--output <value>]
          [--query <value>]
          [--profile <value>]
          [--region <value>]
          [--version <value>]
          [--color <value>]
          [--no-sign-request]
          [--ca-bundle <value>]
          [--cli-read-timeout <value>]
          [--cli-connect-timeout <value>]

OPTIONS
       --dry-run | --no-dry-run (boolean)
          Checks  whether  you  have  the required permissions for the action,
          without actually making the request, and provides an error response.
          If  you have the required permissions, the error response is DryRun-
          Operation . Otherwise, it is UnauthorizedOperation .

       --vpc-id (string)
          The ID of the VPC.

       --tag-specifications (list)
          The tags to assign to the route table.

          (structure)
              The tags to apply to a resource when the resource is being  cre-
              ated.

              NOTE:
                 The  Valid  Values  lists  all the resource types that can be
                 tagged. However, the action you're using  might  not  support
                 tagging  all of these resource types. If you try to tag a re-
                 source type that is unsupported for the action you're  using,
                 you'll get an error.

              ResourceType -> (string)
                 The type of resource to tag on creation.

              Tags -> (list)
                 The tags to apply to the resource.

                 (structure)
                     Describes a tag.

                     Key -> (string)
                        The key of the tag.

                        Constraints:  Tag keys are case-sensitive and accept a
                        maximum of 127 Unicode characters. May not begin  with
                        aws: .

                     Value -> (string)
                        The value of the tag.

                        Constraints:  Tag values are case-sensitive and accept
                        a maximum of 256 Unicode characters.

       Shorthand Syntax:

          ResourceType=string,Tags=[{Key=string,Value=string},{Key=string,Value=string}] ...

       JSON Syntax:

          [
            {
              "ResourceType": "capacity-reservation"|"client-vpn-endpoint"|"customer-gateway"|"carrier-gateway"|"coip-pool"|"dedicated-host"|"dhcp-options"|"egress-only-internet-gateway"|"elastic-ip"|"elastic-gpu"|"export-image-task"|"export-instance-task"|"fleet"|"fpga-image"|"host-reservation"|"image"|"import-image-task"|"import-snapshot-task"|"instance"|"instance-event-window"|"internet-gateway"|"ipam"|"ipam-pool"|"ipam-scope"|"ipv4pool-ec2"|"ipv6pool-ec2"|"key-pair"|"launch-template"|"local- [...]
              "Tags": [
                {
                  "Key": "string",
                  "Value": "string"
                }
                ...
              ]
            }
            ...
          ]

       --cli-input-json (string) Performs service operation based on the  JSON
       string  provided. The JSON string follows the format provided by --gen-
       erate-cli-skeleton. If other arguments  are  provided  on  the  command
       line,  the CLI values will override the JSON-provided values. It is not
       possible to pass arbitrary binary values using a JSON-provided value as
       the string will be taken literally.

       --generate-cli-skeleton  (string)  Prints  a  JSON skeleton to standard
       output without sending an API request. If provided with no value or the
       value input, prints a sample input JSON that can be used as an argument
       for --cli-input-json. If provided with the value output,  it  validates
       the command inputs and returns a sample output JSON for that command.

GLOBAL OPTIONS
       --debug (boolean)

       Turn on debug logging.

       --endpoint-url (string)

       Override command's default URL with the given URL.

       --no-verify-ssl (boolean)

       By  default, the AWS CLI uses SSL when communicating with AWS services.
       For each SSL connection, the AWS CLI will verify SSL certificates. This
       option overrides the default behavior of verifying SSL certificates.

       --no-paginate (boolean)

       Disable automatic pagination.

       --output (string)

       The formatting style for command output.

       o json

       o text

       o table

       --query (string)

       A JMESPath query to use in filtering the response data.

       --profile (string)

       Use a specific profile from your credential file.

       --region (string)

       The region to use. Overrides config/env settings.

       --version (string)

       Display the version of this tool.

       --color (string)

       Turn on/off color output.

       o on

       o off

       o auto

       --no-sign-request (boolean)

       Do  not  sign requests. Credentials will not be loaded if this argument
       is provided.

       --ca-bundle (string)

       The CA certificate bundle to use when verifying SSL certificates. Over-
       rides config/env settings.

       --cli-read-timeout (int)

       The  maximum socket read time in seconds. If the value is set to 0, the
       socket read will be blocking and not timeout. The default value  is  60
       seconds.

       --cli-connect-timeout (int)

       The  maximum  socket connect time in seconds. If the value is set to 0,
       the socket connect will be blocking and not timeout. The default  value
       is 60 seconds.

EXAMPLES
       NOTE:
          To  use  the following examples, you must have the AWS CLI installed
          and configured. See the Getting started guide in the  AWS  CLI  User
          Guide for more information.

          Unless  otherwise  stated,  all  examples  have  unix-like quotation
          rules. These examples will need to be  adapted  to  your  terminal's
          quoting rules. See Using quotation marks with strings in the AWS CLI
          User Guide .

       To create a route table

       This example creates a route table for the specified VPC.

       Command:

          aws ec2 create-route-table --vpc-id vpc-a01106c2

       Output:

          {
              "RouteTable": {
                  "Associations": [],
                  "RouteTableId": "rtb-22574640",
                  "VpcId": "vpc-a01106c2",
                  "PropagatingVgws": [],
                  "Tags": [],
                  "Routes": [
                      {
                          "GatewayId": "local",
                          "DestinationCidrBlock": "10.0.0.0/16",
                          "State": "active"
                      }
                  ]
              }
          }

OUTPUT
       RouteTable -> (structure)
          Information about the route table.

          Associations -> (list)
              The associations between the route table and one or more subnets
              or a gateway.

              (structure)
                 Describes  an  association between a route table and a subnet
                 or gateway.

                 Main -> (boolean)
                     Indicates whether this is the main route table.

                 RouteTableAssociationId -> (string)
                     The ID of the association.

                 RouteTableId -> (string)
                     The ID of the route table.

                 SubnetId -> (string)
                     The ID of the subnet. A subnet ID is not returned for  an
                     implicit association.

                 GatewayId -> (string)
                     The  ID  of the internet gateway or virtual private gate-
                     way.

                 AssociationState -> (structure)
                     The state of the association.

                     State -> (string)
                        The state of the association.

                     StatusMessage -> (string)
                        The status message, if applicable.

          PropagatingVgws -> (list)
              Any virtual private gateway (VGW) propagating routes.

              (structure)
                 Describes a virtual private gateway propagating route.

                 GatewayId -> (string)
                     The ID of the virtual private gateway.

          RouteTableId -> (string)
              The ID of the route table.

          Routes -> (list)
              The routes in the route table.

              (structure)
                 Describes a route in a route table.

                 DestinationCidrBlock -> (string)
                     The IPv4 CIDR block used for the destination match.

                 DestinationIpv6CidrBlock -> (string)
                     The IPv6 CIDR block used for the destination match.

                 DestinationPrefixListId -> (string)
                     The prefix of the Amazon Web Service.

                 EgressOnlyInternetGatewayId -> (string)
                     The ID of the egress-only internet gateway.

                 GatewayId -> (string)
                     The ID of a gateway attached to your VPC.

                 InstanceId -> (string)
                     The ID of a NAT instance in your VPC.

                 InstanceOwnerId -> (string)
                     The ID of Amazon Web Services account that owns  the  in-
                     stance.

                 NatGatewayId -> (string)
                     The ID of a NAT gateway.

                 TransitGatewayId -> (string)
                     The ID of a transit gateway.

                 LocalGatewayId -> (string)
                     The ID of the local gateway.

                 CarrierGatewayId -> (string)
                     The ID of the carrier gateway.

                 NetworkInterfaceId -> (string)
                     The ID of the network interface.

                 Origin -> (string)
                     Describes how the route was created.

                     o CreateRouteTable  - The route was automatically created
                       when the route table was created.

                     o CreateRoute - The route was manually added to the route
                       table.

                     o EnableVgwRoutePropagation - The route was propagated by
                       route propagation.

                 State -> (string)
                     The state of the route.  The  blackhole  state  indicates
                     that the route's target isn't available (for example, the
                     specified gateway isn't attached to the VPC, or the spec-
                     ified NAT instance has been terminated).

                 VpcPeeringConnectionId -> (string)
                     The ID of a VPC peering connection.

                 CoreNetworkArn -> (string)
                     The Amazon Resource Name (ARN) of the core network.

          Tags -> (list)
              Any tags assigned to the route table.

              (structure)
                 Describes a tag.

                 Key -> (string)
                     The key of the tag.

                     Constraints:  Tag  keys  are  case-sensitive and accept a
                     maximum of 127 Unicode characters.  May  not  begin  with
                     aws: .

                 Value -> (string)
                     The value of the tag.

                     Constraints:  Tag  values are case-sensitive and accept a
                     maximum of 256 Unicode characters.

          VpcId -> (string)
              The ID of the VPC.

          OwnerId -> (string)
              The ID of the Amazon Web Services account that  owns  the  route
              table.



                                                          CREATE-ROUTE-TABLE()
